src/objects/Product_Bundle__c.object
<CustomObject>
    <fields>
        <fullName>Bundle_Price__c</fullName>
        <description>This field is used to define the price at Bundle level</description>
        <inlineHelpText>This field is used to define the price at Bundle level</inlineHelpText>
        <label>Bundle Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bundle_Type__c</fullName>
        <description>This will specify whether Bundle Type is of at &apos;bundle level&apos; or at &apos;line level&apos;.</description>
        <inlineHelpText>This will specify whether Bundle Type is of at &apos;bundle level&apos; or at &apos;line level&apos;.</inlineHelpText>
        <label>Bundle Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>It contains the description of Product Bundle</description>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>This will have the End Date of the Product Bundle</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Price_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this is checked bundle price should be editable in Quote/Order Wizards</description>
        <inlineHelpText>Is Price Editable In Quote/Order Wizards</inlineHelpText>
        <label>Is Price Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Quantity_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this is checked bundle Quantity should be editable in Quote/Order Wizards</description>
        <inlineHelpText>Is Quantity Editable In Quote/Order Wizards</inlineHelpText>
        <label>Is Quantity Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_Type__c</fullName>
        <description>This will specify whether Price is onetime, weekly, monthly etc based.</description>
        <inlineHelpText>This will specify whether Price is onetime, weekly, monthly etc based.</inlineHelpText>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Price_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Model__c</fullName>
        <description>This gives provision to select Bundle Pricing Model as default</description>
        <inlineHelpText>This gives provision to select Bundle Pricing Model as default</inlineHelpText>
        <label>Pricing Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pricing_Model</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Bundle_Code__c</fullName>
        <externalId>true</externalId>
        <label>Product Bundle Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Charge_Category__c</fullName>
        <description>Use this field if you would want to configure different Tax or VAT percentages at Product Bundle level</description>
        <inlineHelpText>Use this field if you would want to configure different Tax or VAT percentages at Product Bundle level</inlineHelpText>
        <label>Tax Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Taxable</fullName>
                </value>
                <value>
                    <fullName>Non Taxable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>This field is used to define the Default Quantity at bundle level</description>
        <inlineHelpText>This field is used to define the Default Quantity at bundle level</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Recognition Rule</label>
        <referenceTo>Revenue_Recognition_Rule__c</referenceTo>
        <relationshipLabel>Product Bundles</relationshipLabel>
        <relationshipName>Product_Bundles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>This will have Start Date of the Product Bundle</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unit_Of_Measurement__c</fullName>
        <description>Unit Of Measurement
(Unit, kilo, tonne etc)</description>
        <inlineHelpText>Unit Of Measurement
(Unit, kilo, tonne etc)</inlineHelpText>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>UOM</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Uplift_Frequency__c</fullName>
        <label>Uplift Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Uplift__c</fullName>
        <label>Uplift %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Product Bundle</label>
    <nameField>
        <label>Product Bundle</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Bundles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>